<resources>
  <string name="first_message_terms_">La aplicación de autodiagnóstico de diabetes tiene como objetivo proporcionar información y recursos sobre la diabetes para el autodiagnóstico y la concientización general. No sustituye el diagnóstico médico profesional ni el asesoramiento médico personalizado. No se debe utilizar la aplicación como sustituto de una consulta médica o para tomar decisiones médicas sin el debido respaldo profesional. Si tienes alguna preocupación o sospecha de que puedes tener diabetes, te recomendamos que consultes a un médico u otro profesional de la salud cualificado.</string>
  <string name="fourth_message_terms">La aplicación y todo su contenido, incluyendo pero no limitado a texto, gráficos, logotipos, iconos, imágenes, clips de audio, compilaciones de datos y software, son propiedad exclusiva de los titulares de derechos correspondientes. Está prohibida la reproducción, distribución, modificación, venta o cualquier otro uso no autorizado del contenido sin el consentimiento expreso por escrito de los titulares de derechos.</string>
  <string name="first_message_terms">Bienvenido(a) a nuestra aplicación de autodiagnóstico de diabetes. Antes de utilizar esta aplicación, te pedimos que leas detenidamente los siguientes términos y condiciones. Al acceder o utilizar esta aplicación, aceptas cumplir con estos términos y condiciones. Si no estás de acuerdo con alguno de ellos, por favor, no utilices esta aplicación.</string>
  <string name="third_message_terms">Respetamos tu privacidad y nos comprometemos a proteger tus datos personales. Al utilizar la aplicación, aceptas nuestra política de privacidad que describe cómo recopilamos, utilizamos y protegemos tus datos. Te recomendamos que revises nuestra política de privacidad para obtener más información sobre cómo manejamos la información personal.</string>
  <string name="second_message_terms">Debes utilizar la aplicación de forma responsable y respetar todas las leyes y regulaciones aplicables. No debes utilizar la aplicación de manera fraudulenta, difamatoria, ofensiva, ilegal o inapropiada. No puedes acceder a áreas restringidas de la aplicación sin autorización o intentar interferir con el funcionamiento normal de la misma.</string>
  <string name="seventh_message_terms">Nos reservamos el derecho de modificar estos términos y condiciones en cualquier momento sin previo aviso. Se te notificará de los cambios a través de la aplicación o por otros medios adecuados. Si continúas utilizando la aplicación después de la modificación de los términos y condiciones, se considerará que has aceptado los cambios.</string>
  <string name="sixth_message_terms">Nos reservamos el derecho de modificar estos términos y condiciones en cualquier momento sin previo aviso. Se te notificará de los cambios a través de la aplicación o por otros medios adecuados. Si continúas utilizando la aplicación después de la modificación de los términos y condiciones, se considerará que has aceptado los cambios.</string>
  <string name="fifth_message_terms">La aplicación se proporciona tal cual y no ofrecemos ninguna garantía o representación, expresa o implícita, sobre su precisión, confiabilidad o adecuación para un propósito particular. No seremos responsables de ningún daño directo, indirecto, incidental, consecuente o punitivo derivado del uso de esta aplicación.</string>
  <string name="negative_message">Sigue utilizando la aplicación, la sección de RECOMENDACIONES te ayudará más de lo que crees. Acude a tu medico</string>
  <string name="recover_password_message">Enviaremos un link al correo asociado a tu cuenta para asegurarnos que esta cuenta te pertenece.</string>
  <string name="positive_message">A continuación contestarás un cuestionario. Es importante que acudas a tu médico.</string>
  <string name="medicines_control">Lleva un control de tus medicamentos. Accede a la sección de Medicamentos.</string>
  <string name="password_valid">Mínimo de 8 caracteres. Un número, una mayuscula y un caracter especial</string>
  <string name="error_password">Mínimo de 8 caracteres. Un número, una mayuscula y un caracter especial</string>
  <string name="message_doctor">Es importante que acudas a tu médico para tener un buen tratamiento</string>
  <string name="description_recommend">Descripción de la recomendación para el usuario</string>
  <string name="choose_option">Elige la opción con la que te sientas más identificado</string>
  <string name="sixth_title_message_terms">Cambios en los Términos y Condiciones</string>
  <string name="check_recommend">Checa las recomendaciones que tenemos para ti.</string>
  <string name="days_exercise">¿Cada Cuánto hace ejercicio? (días por semana)</string>
  <string name="email_valid">Formato de correo aceptado: ejemplo123@mail.com</string>
  <string name="first_title_message_terms">Propósito y Uso de la Aplicación</string>
  <string name="third_title_message_terms">Privacidad y Protección de Datos</string>
  <string name="family_with_diabetes">¿Tienes algún familiar con diabetes?</string>
  <string name="forgot_current_password">¿Olvidaste tu contraseña actual?</string>
  <string name="seventh_title_message_terms">Ley Aplicable y Jurisdicción</string>
  <string name="three_characters_min">Debes ingresar minimo 3 caracteres</string>
  <string name="fifth_title_message_terms">Descargo de Responsabilidad</string>
  <string name="risk_have_diabetes">¡Riesgo bajo de tener diabetes!</string>
  <string name="choose_born_date">Selecciona tu fecha de nacimiento</string>
  <string name="title_terms">Términos y Condiciones de DCYourself</string>
  <string name="confirm_with_password">Confirma con tu contraseña</string>
  <string name="fourth_title_message_terms">Propiedad Intelectual</string>
  <string name="data_necesary">Ingresa los datos que se solicitan</string>
  <string name="current_profile">Manten tu perfil actualizado.</string>
  <string name="first_diagnose">Realiza un primer Diagnóstico</string>
  <string name="information_account">Información de la cuenta</string>
  <string name="same_password">La contraseña debe coincidir</string>
  <string name="preferences">Preferencias (Recomendaciones)</string>
  <string name="accept_terms">Acepto términos y condiciones</string>
  <string name="second_title_message_terms">Uso Responsable</string>
  <string name="confirm_email">Confirmar correo electrónico</string>
  <string name="personal_information">Información personal</string>
  <string name="good_health">¡Tu estado de salud es bueno!</string>
  <string name="forgot_password">¿Olvidaste tu contraseña?</string>
  <string name="control_medicine">Control de medicamentos</string>
  <string name="have_diabetes">¡Riesgo de tener diabetes!</string>
  <string name="recover_password">Recuperar contraseña</string>
  <string name="confirm_password">Confirmar contraseña</string>
  <string name="physical_activity">Activación física</string>
  <string name="description_logo">Logo de DCYourself</string>
  <string name="change_password">Cambiar contraseña</string>
  <string name="already_account">¿Ya tienes cuenta?</string>
  <string name="current_password">Contraseña actual</string>
  <string name="add_medicine">Agregar medicamento</string>
  <string name="edit_medicine">Editar medicamento</string>
  <string name="born_date">¿Fecha de nacimiento?</string>
  <string name="type_diabetes">¡Diabetes [Tipo]!</string>
  <string name="title_recommend">Recomendación 1</string>
  <string name="delete_account">Eliminar cuenta</string>
  <string name="last_name_two">Apellido materno</string>
  <string name="new_password">Nueva contraseña</string>
  <string name="total_quantity">Cantidad total</string>
  <string name="weight_height">Peso y Estatura</string>
  <string name="next_dose">Próximo consumo en:</string>
  <string name="title_medicine">Medicamento 1</string>
  <string name="wait_moment">Espera un poco…</string>
  <string name="gender">¿Cuál es tu género?</string>
  <string name="edit_profile">Editar perfil</string>
  <string name="date_start">Fecha de inicio</string>
  <string name="current_mail">Correo Actual</string>
  <string name="last_name">Apellido paterno</string>
  <string name="nutritional">Nutrimentales</string>
  <string name="welcome_user">!Bienvenido¡</string>
  <string name="recommend">Recomendaciones</string>
  <string name="email">Correo electrónico</string>
  <string name="medicines">Medicamentos</string>
  <string name="add_data">Agregar datos</string>
  <string name="hemoglobin">Hemoglobina</string>
  <string name="date_end">Fecha de fin</string>
  <string name="diagnose">Diagnósticar</string>
  <string name="login">Iniciar sesión</string>
  <string name="logout">Cerrar sesión</string>
  <string name="frecuency">frecuencia</string>
  <string name="app_name">DCYourself</string>
  <string name="question">¿Pregunta?</string>
  <string name="password">Contraseña</string>
  <string name="continue_">Continuar</string>
  <string name="welcome">Bienvenido</string>
  <string name="quantity">Cantidad:</string>
  <string name="how_many">¿Cuántos?</string>
  <string name="update">Actualizar</string>
  <string name="signup">Regístrate</string>
  <string name="register">Registro</string>
  <string name="risk">Riesgo: Bajo</string>
  <string name="insulin">Insulina</string>
  <string name="three_four">3 a 4</string>
  <string name="five_seven">5 a 7</string>
  <string name="height">Estatura</string>
  <string name="delete">Eliminar</string>
  <string name="glucose">Glucosa</string>
  <string name="names">Nombre(s)</string>
  <string name="change">Cambiar</string>
  <string name="next">Siguiente</string>
  <string name="one_two">1 a 2</string>
  <string name="go_back">Atrás</string>
  <string name="end">Finalizar</string>
  <string name="log">Ingresar</string>
  <string name="name">Nombre</string>
  <string name="add">Agregar</string>
  <string name="days_">Días:</string>
  <string name="never">Nunca</string>
  <string name="woman">Mujer</string>
  <string name="weight">Peso</string>
  <string name="man">Hombre</string>
  <string name="dose">Dosis</string>
  <string name="days">Días</string>
  <string name="yes">Si</string>
  <string name="no">No</string>
</resources>