<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".AccountInformation">

  <ImageView
    android:id="@+id/imageView17"
    android:layout_width="175dp"
    android:layout_height="50dp"
    android:layout_marginTop="16dp"
    android:background="#00FFFFFF"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:srcCompat="@drawable/img_logo_secondary"
    tools:ignore="ContentDescription" />

  <TextView
    android:id="@+id/nameUser"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginVertical="30dp"
    android:textColor="#155959"
    android:text="@string/information_account"
    android:fontFamily="@font/droid_sans_bold"
    android:textSize="24sp"
    android:textAlignment="center"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/imageView17"
    />

  <View
    android:id="@+id/background"
    style="@style/BackgroundFormSecond"
    android:layout_marginVertical="30dp"
    android:layout_marginHorizontal="20dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toTopOf="@+id/goBack"
    app:layout_constraintTop_toBottomOf="@+id/nameUser"
    />

  <TextView
    android:id="@+id/email"
    android:layout_width="314dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp"
    android:text="@string/current_mail"
    android:fontFamily="@font/droid_sans_bold"
    android:textSize="24sp"
    android:textColor="@color/white"
    android:textAlignment="center"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@+id/background"
    app:layout_constraintVertical_bias="0.5" />

  <EditText
    android:id="@+id/editEmail"
    style="@style/ButtonSecondary"
    android:layout_width="314dp"
    android:layout_height="56dp"
    android:ems="10"
    android:hint="@string/email"
    android:inputType="textEmailAddress"
    android:paddingStart="10dp"
    android:textSize="16sp"
    app:layout_constraintBottom_toTopOf="@+id/changePassword"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/email"
    app:layout_constraintVertical_bias="0.2"
    android:autofillHints=""
    tools:ignore="RtlSymmetry" />

  <EditText
    android:id="@+id/editEmailConfirm"
    android:layout_width="314dp"
    android:layout_height="56dp"
    android:background="@drawable/background_button_secondary"
    android:ems="10"
    android:fontFamily="@font/droid_sans"
    android:hint="@string/confirm_email"
    android:inputType="textEmailAddress"
    android:paddingStart="10dp"
    android:textSize="16sp"
    app:layout_constraintBottom_toTopOf="@+id/changePassword"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/editEmail"
    app:layout_constraintVertical_bias="0.2"
    android:autofillHints=""
    tools:ignore="RtlSymmetry" />

  <Button
    android:id="@+id/changePassword"
    android:layout_width="0dp"
    android:layout_height="55dp"
    android:layout_marginVertical="20dp"
    android:layout_marginHorizontal="50dp"
    android:text="@string/change_password"
    android:textAppearance="@style/TextAppearance.AppCompat.Large"
    android:textSize="20sp"
    android:textColor="#28A6A6"
    android:fontFamily="@font/droid_sans_bold"
    android:background="@drawable/background_button_secondary"
    app:layout_constraintStart_toStartOf="@+id/background"
    app:layout_constraintEnd_toEndOf="@+id/background"
    app:layout_constraintBottom_toTopOf="@+id/next"/>

  <Button
    android:id="@+id/next"
    style="@style/ButtonPrimary"
    android:layout_width="0dp"
    android:layout_height="55dp"
    android:layout_marginVertical="30dp"
    android:layout_marginHorizontal="50dp"
    android:text="@string/update"
    app:layout_constraintStart_toStartOf="@+id/background"
    app:layout_constraintEnd_toEndOf="@+id/background"
    app:layout_constraintBottom_toBottomOf="@+id/background"/>

  <Button
    android:id="@+id/goBack"
    android:layout_width="0dp"
    android:layout_height="55dp"
    android:layout_marginVertical="20dp"
    android:layout_marginHorizontal="50dp"
    android:text="@string/go_back"
    android:textAppearance="@style/TextAppearance.AppCompat.Large"
    android:textColor="@color/white"
    android:textSize="20sp"
    android:fontFamily="@font/droid_sans_bold"
    android:background="@drawable/background_home"
    app:layout_constraintStart_toStartOf="@+id/background"
    app:layout_constraintEnd_toEndOf="@+id/background"
    app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>