<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".RecoverPassword">

  <View
    android:id="@+id/my_label"
    style="@style/BackgroundForm"
    android:layout_marginTop="330dp"
    android:padding="10dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="1.0" />

  <ImageView
    android:id="@+id/imageView2"
    style="@style/PrincipalLogo"
    app:layout_constraintBottom_toTopOf="@+id/my_label"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:ignore="ContentDescription"/>

  <TextView
    android:id="@+id/textView2"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="20dp"
    android:textAlignment="center"
    android:fontFamily="@font/open_sans_bold"
    android:text="@string/recover_password"
    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
    android:textColor="@color/white"
    android:textSize="32sp"
    app:layout_constraintBottom_toTopOf="@+id/editEmail"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@id/my_label"
    app:layout_constraintVertical_bias="0.5"
    app:layout_constraintHorizontal_bias="0.5" />

  <EditText
    android:id="@+id/editEmail"
    android:fontFamily="@font/droid_sans"
    style="@style/BackgroundEdit"
    android:layout_width="0dp"
    android:layout_height="55dp"
    android:ems="10"
    android:layout_marginHorizontal="60dp"
    android:hint="@string/email"
    android:inputType="textEmailAddress"
    android:textSize="16sp"
    app:layout_constraintBottom_toTopOf="@+id/textView6"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView2"
    app:layout_constraintVertical_bias="0.5"
    tools:ignore="autofill,RtlSymmetry" />

  <TextView
    android:id="@+id/textView6"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="40dp"
    android:fontFamily="@font/droid_sans"
    android:text="@string/recover_password_message"
    android:textAlignment="textStart"
    android:textAllCaps="false"
    android:textColor="@color/white"
    app:layout_constraintBottom_toTopOf="@+id/goBack"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/editEmail"
    app:layout_constraintVertical_bias="0.5" />

  <Button
    android:id="@+id/goBack"
    style="@style/ButtonSecondary"
    android:layout_width="112dp"
    android:layout_height="56dp"
    android:layout_marginBottom="40dp"
    android:text="@string/go_back"
    android:textAppearance="@style/TextAppearance.AppCompat.Large"
    android:textSize="16sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.2"
    app:layout_constraintStart_toStartOf="parent" />

  <Button
    android:id="@+id/next"
    style="@style/ButtonPrimary"
    android:layout_width="112dp"
    android:layout_height="56dp"
    android:layout_marginBottom="40dp"
    android:text="@string/change"
    android:textSize="16sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.8"
    app:layout_constraintStart_toStartOf="parent" />

  <com.erickcapilla.dcyourself.util.ProgressBarComponent
    android:id="@+id/progressBar"
    style="@style/ProgressTheme"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/imageView2"
    app:layout_constraintBottom_toTopOf="@+id/my_label"
    app:message="@string/wait_moment"
    android:visibility="gone"/>
</androidx.constraintlayout.widget.ConstraintLayout>