<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".AddMedicines">

  <ImageView
    android:id="@+id/imageView17"
    android:layout_width="175dp"
    android:layout_height="50dp"
    android:layout_marginTop="16dp"
    android:background="#00FFFFFF"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:srcCompat="@drawable/img_logo_secondary"
    tools:ignore="ContentDescription" />

  <TextView
    android:id="@+id/textTitle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginVertical="30dp"
    android:textColor="#155959"
    android:text="@string/add_medicine"
    android:fontFamily="@font/droid_sans_bold"
    android:textSize="24sp"
    android:textAlignment="center"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/imageView17"
    />

  <View
    android:id="@+id/background"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:layout_marginVertical="30dp"
    android:layout_marginHorizontal="20dp"
    android:background="@drawable/background_form_second"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toTopOf="@id/bottomNavigation"
    app:layout_constraintTop_toBottomOf="@+id/textTitle"
    />

  <EditText
    android:id="@+id/editName"
    android:layout_width="0dp"
    android:layout_height="55dp"
    android:layout_marginHorizontal="40dp"
    android:layout_marginTop="35dp"
    android:background="@drawable/background_button_secondary"
    android:hint="@string/name"
    android:paddingStart="10dp"
    android:textColor="@color/black"
    android:maxLength="25"
    android:textSize="16sp"
    android:fontFamily="@font/droid_sans"
    app:layout_constraintStart_toStartOf="@+id/background"
    app:layout_constraintEnd_toEndOf="@id/background"
    app:layout_constraintTop_toTopOf="@id/background"
    android:inputType="textCapWords"
    tools:ignore="Autofill,RtlSymmetry" />

  <EditText
    android:id="@+id/editDose"
    android:layout_width="0dp"
    android:layout_height="55dp"
    android:layout_marginStart="40dp"
    android:layout_marginEnd="10dp"
    android:background="@drawable/background_button_secondary"
    android:hint="@string/dose"
    android:paddingStart="10dp"
    android:textColor="@color/black"
    android:textSize="16sp"
    android:fontFamily="@font/droid_sans"
    app:layout_constraintStart_toStartOf="@+id/background"
    app:layout_constraintEnd_toStartOf="@id/editFrequency"
    app:layout_constraintTop_toBottomOf="@id/editName"
    app:layout_constraintBottom_toTopOf="@+id/editStart"
    android:inputType="number"
    tools:ignore="Autofill,RtlSymmetry" />

  <Spinner
    android:id="@+id/editFrequency"
    android:layout_width="0dp"
    android:layout_height="55dp"
    android:layout_marginEnd="40dp"
    android:layout_marginStart="10dp"
    android:background="@drawable/background_button_secondary"
    android:hint="@string/frecuency"
    android:paddingStart="10dp"
    android:textColor="@color/black"
    android:textSize="16sp"
    android:fontFamily="@font/droid_sans"
    app:layout_constraintStart_toEndOf="@+id/editDose"
    app:layout_constraintEnd_toEndOf="@id/background"
    app:layout_constraintTop_toBottomOf="@id/editName"
    app:layout_constraintBottom_toTopOf="@+id/editStart"
    android:inputType="number"
    tools:ignore="RtlSymmetry" />

  <EditText
    android:id="@+id/editStart"
    android:layout_width="0dp"
    android:layout_height="55dp"
    android:layout_marginStart="40dp"
    android:layout_marginEnd="10dp"
    android:background="@drawable/background_button_secondary"
    android:hint="@string/date_start"
    android:paddingStart="10dp"
    android:textColor="@color/black"
    android:textSize="16sp"
    android:fontFamily="@font/droid_sans"
    app:layout_constraintStart_toStartOf="@+id/background"
    app:layout_constraintEnd_toStartOf="@id/editEnd"
    app:layout_constraintTop_toBottomOf="@id/editDose"
    app:layout_constraintBottom_toTopOf="@+id/editTotal"
    android:clickable="false"
    android:focusable="false"
    android:inputType="text"
    tools:ignore="autofill,RtlSymmetry" />

  <EditText
    android:id="@+id/editEnd"
    android:layout_width="0dp"
    android:layout_height="55dp"
    android:layout_marginEnd="40dp"
    android:layout_marginStart="10dp"
    android:background="@drawable/background_button_secondary"
    android:hint="@string/date_end"
    android:paddingStart="10dp"
    android:textColor="@color/black"
    android:textSize="16sp"
    android:fontFamily="@font/droid_sans"
    app:layout_constraintStart_toEndOf="@+id/editStart"
    app:layout_constraintEnd_toEndOf="@id/background"
    app:layout_constraintTop_toBottomOf="@id/editDose"
    app:layout_constraintBottom_toTopOf="@+id/editTotal"
    android:clickable="false"
    android:focusable="false"
    android:inputType="text"
    tools:ignore="autofill,RtlSymmetry"
    />

  <EditText
    android:id="@+id/editTotal"
    android:layout_width="0dp"
    android:layout_height="55dp"
    android:layout_marginHorizontal="40dp"
    android:background="@drawable/background_button_secondary"
    android:hint="@string/total_quantity"
    android:paddingStart="10dp"
    android:textColor="@color/black"
    android:textSize="16sp"
    android:fontFamily="@font/droid_sans"
    app:layout_constraintStart_toStartOf="@+id/background"
    app:layout_constraintEnd_toEndOf="@id/background"
    app:layout_constraintTop_toBottomOf="@id/editEnd"
    app:layout_constraintBottom_toTopOf="@+id/buttonAdd"
    android:inputType="number"
    android:maxLength="3"
    tools:ignore="autofill,RtlSymmetry"
    />

  <Button
    android:id="@+id/buttonAdd"
    style="@style/ButtonPrimary"
    android:layout_width="0dp"
    android:layout_height="55dp"
    android:layout_marginVertical="20dp"
    android:layout_marginHorizontal="50dp"
    android:text="@string/add"
    app:layout_constraintStart_toStartOf="@+id/background"
    app:layout_constraintEnd_toEndOf="@+id/background"
    app:layout_constraintBottom_toBottomOf="@+id/background"/>

  <com.google.android.material.bottomnavigation.BottomNavigationView
    android:id="@+id/bottomNavigation"
    style="@style/BackgroundBottomMenu"
    android:layout_width="match_parent"
    android:layout_marginHorizontal="20dp"
    android:layout_marginBottom="40dp"
    android:paddingVertical="10dp"
    app:itemIconTint="@drawable/item_selector"
    app:itemRippleColor="@android:color/transparent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:labelVisibilityMode="unlabeled" />

</androidx.constraintlayout.widget.ConstraintLayout>