<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".ui.MainActivity" >

  <View
    android:id="@+id/my_label"
    style="@style/BackgroundForm"
    android:layout_width="0dp"
    android:padding="10dp"
    android:layout_marginTop="330dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="1.0" />

  <ImageView
    android:id="@+id/imageView"
    style="@style/PrincipalLogo"
    app:layout_constraintBottom_toTopOf="@+id/my_label"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:ignore="ContentDescription"/>

  <TextView
    android:id="@+id/textView2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fontFamily="@font/open_sans_bold"
    android:text="@string/welcome"
    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
    android:textColor="@color/white"
    android:textSize="32sp"
    app:layout_constraintBottom_toTopOf="@+id/signUp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@id/my_label"
    app:layout_constraintVertical_bias="0.185"
    app:layout_constraintHorizontal_bias="0.5"/>

  <Button
    android:id="@+id/signUp"
    style="@style/ButtonPrimary"
    android:layout_width="0dp"
    android:layout_height="55dp"
    android:layout_marginHorizontal="60dp"
    android:text="@string/signup"
    app:layout_constraintBottom_toTopOf="@+id/logIn"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView2"
    app:layout_constraintVertical_bias="0.5" />

  <Button
    android:id="@+id/logIn"
    style="@style/ButtonSecondary"
    android:layout_width="0dp"
    android:layout_height="55dp"
    android:layout_marginHorizontal="60dp"
    android:text="@string/login"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.497"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/signUp"
    app:layout_constraintVertical_bias="0.706" />

  <TextView
    android:id="@+id/textView3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fontFamily="@font/droid_sans_bold"
    android:text="@string/already_account"
    android:textColor="@color/white"
    android:textSize="16sp"
    app:layout_constraintBottom_toTopOf="@+id/logIn"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0"
    app:layout_constraintStart_toStartOf="@+id/logIn"
    app:layout_constraintTop_toBottomOf="@+id/signUp"
    app:layout_constraintVertical_bias="0.872" />

</androidx.constraintlayout.widget.ConstraintLayout>